@@ -1,0 +1,17 @@
+description "ceilometer-agent-notification"
+author "Yolanda Robla <yolanda.robla@canonical.com>"
+
+start on runlevel [2345]
+stop on runlelvel [!2345]
+
+chdir /var/run
+
+pre-start script
+	mkdir -p /var/run/ceilometer
+	chown ceilometer:ceilometer /var/run/ceilometer
+
+	mkdir -p /var/lock/ceilometer
+	chown ceilometer:ceilometer /var/lock/ceilometer
+end script
+
+exec start-stop-daemon --start --chuid ceilometer --exec /usr/bin/ceilometer-agent-notification
