@@ -1,2 +1,1 @@
 usr/bin/ceilometer-collector
-usr/bin/ceilometer-collector-udp
