@@ -7,6 +7,7 @@ Build-Depends:
  debhelper (>= 8.0.0),
  python-all (>= 2.6),
  python-anyjson (>= 0.3.3),
+ python-argparse,
  python-babel (>= 0.9.6),
  python-ceilometerclient (>= 1.0.6),
  python-coverage,
@@ -16,16 +17,17 @@ Build-Depends:
  python-flask (>= 0.10),
  python-glanceclient (>= 1:0.9.3),
  python-httplib2,
- python-happybase,
- python-iso8601,
+ python-happybase (>= 0.4),
+ python-iso8601 (>=0.1.8),
  python-keystoneclient (>= 1:0.4.1),
- python-kombu (>= 2.4.7),
+ python-kombu (>= 2.4.8),
  python-lxml (>= 2.3),
+ python-lockfile (>=0.8),
  python-migrate,
  python-mock,
  python-mox,
  python-msgpack,
- python-netaddr,
+ python-netaddr (>=0.7.6),
  python-nova,
  python-novaclient (>= 1:2.15.0),
  python-oslo.config (>= 1:1.2.0),
@@ -46,7 +48,7 @@ Build-Depends:
  python-testtools (>= 0.9.32),
  python-webob (>= 1.2.3),
  python-wsme (>= 0.5b6),
- python-yaml,
+ python-yaml (>= 3.1.0),
  testrepository (>= 0.0.17)
 Standards-Version: 3.9.4
 Vcs-Browser: http://bazaar.launchpad.net/~ubuntu-server-dev/ceilometer/icehouse/files
@@ -56,31 +58,33 @@ Package: python-ceilometer
 Architecture: all
 Depends:
  alembic (>= 0.6.0),
- msgpack-python,
+ python-msgpack,
  python-anyjson (>= 0.3.3),
- python-ceilometerclient (>= 1.0.3),
+ python-argparse,
+ python-ceilometerclient (>= 1.0.6),
  python-eventlet (>= 0.13.0),
  python-flask (>= 0.10),
  python-glanceclient (>= 1:0.9.3),
- python-happybase,
- python-iso8601,
- python-keystoneclient (>= 1:0.3.2),
+ python-happybase (>= 0.4),
+ python-iso8601 (>= 0.1.8),
+ python-keystoneclient (>= 1:0.4.1),
  python-kombu (>= 2.4.8),
  python-lxml (>= 2.3),
+ python-lockfile (>= 0.8),
  python-migrate,
  python-netaddr,
- python-novaclient (>= 1:2.12.10),
+ python-novaclient (>= 1:2.15.0),
  python-oslo.config (>= 1:1.2.0),
  python-pecan (>= 0.2.0),
  python-pymongo (>= 2.6),
- python-six,
- python-yaml,
+ python-six (>= 1.4.1),
+ python-yaml (>= 3.1.0),
  python-requests (>= 1.1),
  python-sqlalchemy (>= 0.8.2),
  python-stevedore (>= 0.10),
  python-swiftclient (>= 1.5),
  python-webob (>= 1.2.3),
- python-wsme (>= 0.5b5),
+ python-wsme (>= 0.5b6),
  ${misc:Depends},
  ${python:Depends}
 Description: ceilometer python libraries
@@ -187,3 +191,21 @@ Description: ceilometer central agent
  (A ceilometer is an instrument that measures cloud coverage.)
  .
  This package contains the central agent.
+
+Package: ceilometer-agent-notification
+Architecture: all
+Depends:
+ ceilometer-common (= ${binary:Version}),
+ ${misc:Depends},
+ ${python:Depends}
+Description: ceilometer notification agent
+ Ceilometer aims to deliver a unique point of contact for billing systems to
+ aquire all counters they need to establish  customer billing, accross all
+ current and future OpenStack components. The delivery of counters must
+ be tracable and auditable, the counters must be easily extensible to support
+ new projects, and agents doing data collections should be
+ independent of the overall system.
+ .
+ (A ceilometer is an instrument that measures cloud coverage.)
+ .
+ This package contains the notificaiton agent.
