@@ -2,7 +2,7 @@ Index: ceilometer/etc/ceilometer/ceilometer.conf.sample
 ===================================================================
 --- ceilometer.orig/etc/ceilometer/ceilometer.conf.sample	2013-09-06 15:48:23.491575697 -0700
 +++ ceilometer/etc/ceilometer/ceilometer.conf.sample	2013-09-06 15:49:12.755575251 -0700
-@@ -111,7 +111,7 @@
+@@ -127,7 +127,7 @@
  #
  
  # the filename to use with sqlite (string value)
@@ -11,10 +11,10 @@ Index: ceilometer/etc/ceilometer/ceilometer.conf.sample
  
  # If true, use synchronous mode for sqlite (boolean value)
  #sqlite_synchronous=true
-@@ -528,7 +528,7 @@
- 
- # The SQLAlchemy connection string used to connect to the
- # database (string value)
+@@ -576,7 +576,7 @@
+ # Deprecated group/name - [DEFAULT]/sql_connection
+ # Deprecated group/name - [DATABASE]/sql_connection
+ # Deprecated group/name - [sql]/connection
 -#connection=sqlite:////ceilometer/openstack/common/db/$sqlite_db
 +connection=sqlite:////var/lib/ceilometer/$sqlite_db
  
